[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-prompt-builder"
version = "0.1.0"
description = "Dynamic system prompt builder for Grok with user integrations and interface context"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Super Sfera LLC"}
]
keywords = ["grok", "xai", "system-prompt", "llm", "context", "integrations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
grok-prompt-builder = "grok_prompt_builder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_prompt_builder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
